--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,17 @@
 export(analyse_indicator)
 export(map_to_case)
 export(map_to_design)
+export(map_to_file)
 export(map_to_hypothesis_test)
+export(map_to_questionnaire)
 export(map_to_summary_statistic)
 export(map_to_visualisation)
+export(map_to_weighting)
+export(reach_style_color_beige)
+export(reach_style_color_beiges)
+export(reach_style_color_darkgrey)
+export(reach_style_color_darkgreys)
+export(reach_style_color_lightgrey)
+export(reach_style_color_lightgreys)
+export(reach_style_color_red)
+export(reach_style_color_reds)
