--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,8 +3,23 @@ Title: What the Package Does (one line, title case)
 Version: 0.0.0.9000
 Authors@R: person("First", "Last", email = "first.last@example.com", role = c("aut", "cre"))
 Description: What the package does (one paragraph).
-Depends: R (>= 3.4.2)
+Depends: 
+    R (>= 3.4.2),
+    survey,
+    magrittr,
+    ggplot2,
+    ggthemes
+Imports:
+    dplyr,
+    reshape2,
+    questionr,
+    koboquest
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
+Suggests: 
+    testthat,
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
