--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,9 +8,11 @@ export(map_to_case)
 export(map_to_design)
 export(map_to_file)
 export(map_to_hypothesis_test)
+export(map_to_labeled)
 export(map_to_result)
 export(map_to_summary_statistic)
 export(map_to_visualisation)
+export(map_to_visualisation_heatmap)
 export(map_to_weighting)
 export(reach_style_color_beige)
 export(reach_style_color_beiges)
