with '#' will be ignored, and an empty message aborts the commit.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,7 +21,7 @@ Imports:
     htmltools
 Remotes:
     github::mabafaba/koboquest,
-    github::mabafaba/surveyweights
+    github::ellieallien/surveyweights
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
