--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(map_to_labeled)
 export(map_to_result)
 export(map_to_summary_statistic)
 export(map_to_table)
+export(map_to_template)
 export(map_to_visualisation)
 export(map_to_visualisation_heatmap)
 export(map_to_weighting)
