Vignettes and tutorials updated, new markdown templates, map_to_master_table function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(map_to_design)
 export(map_to_file)
 export(map_to_hypothesis_test)
 export(map_to_labeled)
+export(map_to_master_table)
 export(map_to_result)
 export(map_to_summary_statistic)
 export(map_to_table)
