consistently pass label_varnames to generic_recursive_markdown

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,7 @@ Imports:
     dplyr,
     reshape2,
     questionr,
-    koboquest,
+    koboquest (>= 1.0.1),
     data.table,
     surveyweights,
     knitr,
