--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,11 +20,13 @@ Imports:
     surveyweights,
     knitr,
     htmltools,
-    assertthat
+    assertthat,
+    hypegrammaR (>= 0.0.0.9000)
 Remotes:
     github::mabafaba/koboquest,
     github::mabafaba/kobostandards,
-    github::ellieallien/surveyweights
+    github::ellieallien/surveyweights,
+    github::mabafaba/composr
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
