--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,18 +15,24 @@ Imports:
     dplyr,
     reshape2,
     questionr,
-    koboquest (>= 1.0.1),
+    koboquest (>= 1.0.0),
     data.table,
-    surveyweights,
+    surveyweights (>= 0.1.0),
     knitr,
     htmltools,
     assertthat,
-    hypegrammaR (>= 0.0.0.9000)
-Remotes:
+    hypegrammaR (>= 0.0.0.9000),
+    visualisationIMPACT (>= 0.1.0),
+    composr (>= 0.1.1)
+Remotes:  
     github::mabafaba/koboquest,
     github::mabafaba/kobostandards,
     github::ellieallien/surveyweights,
-    github::mabafaba/composr
+    github::mabafaba/composr,
+    sharonorengo/visualisationIMPACT,
+    mabafaba/composr,
+    ellieallien/surveyweights,
+    mabafaba/koboquest
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
