confidence level param documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(load_samplingframe)
 export(map_to_case)
 export(map_to_design)
 export(map_to_file)
+export(map_to_generic_hierarchical_html)
 export(map_to_hypothesis_test)
 export(map_to_labeled)
 export(map_to_master_table)
