--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,9 @@ Depends:
     ggplot2,
     ggthemes,
     tidyr,
-    crayon
+    crayon,
+    grid,
+    stats
 Imports:
     dplyr,
     reshape2,
@@ -23,7 +25,10 @@ Imports:
     htmltools,
     assertthat,
     kableExtra,
-    srvyr
+    srvyr,
+    extrafont,
+    purrr,
+    scales
 Remotes:
     github::mabafaba/koboquest,
     github::mabafaba/xlsformfill,
@@ -31,11 +36,12 @@ Remotes:
     github::mabafaba/composr,
     github::ellieallien/surveyweights,
     github::mabafaba/koboquest
-License: What license is it under?
+License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
 Suggests: 
     testthat,
-    rmarkdown
+    rmarkdown,
+    tibble
 VignetteBuilder: knitr
